[package]
name = "roborock-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
aes = "0.8.4"
cbc = { version = "0.1.2", features = ["block-padding", "alloc"] }
env_logger = "0.11.3"
log = "0.4.22"
md5 = "0.7.0"
packed_struct = "0.10.1"
serde = "1.0.204"
tokio = { version = "1.38.0", features = ["full"] }
